<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
 
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calculadora01.MainActivity" >

    <EditText
        android:id="@+id/editTextValor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewValor1"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/hint_valor1"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewValor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="74dp"
        android:text="@string/label_valor1" />

    <TextView
        android:id="@+id/textViewValor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewValor1"
        android:layout_below="@+id/textViewValor1"
        android:layout_marginTop="18dp"
        android:text="@string/label_valor2" />

    <EditText
        android:id="@+id/editTextValor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewValor2"
        android:layout_alignStart="@+id/editTextValor1"
        android:ems="10"
        android:hint="@string/hint_valor2" />

    <Button
        android:id="@+id/buttonSoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewValor2"
        android:layout_alignEnd="@+id/textViewValor2"
        android:layout_below="@+id/textViewValor2"
        android:text="@string/label_botaoSoma" />

    <Button
        android:id="@+id/buttonSubtracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonSoma"
        android:layout_below="@+id/editTextValor2"
        android:layout_toEndOf="@+id/buttonSoma"
        android:text="@string/label_botaoSubtracao" />

    <Button
        android:id="@+id/buttonMultiplicacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonSubtracao"
        android:layout_below="@+id/editTextValor2"
        android:layout_toEndOf="@+id/buttonSubtracao"
        android:text="@string/label_botaoMultiplicacao" />

    <Button
        android:id="@+id/buttonDivisao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonMultiplicacao"
        android:layout_below="@+id/editTextValor2"
        android:layout_toEndOf="@+id/buttonMultiplicacao"
        android:text="@string/label_botaoDivisao" />

    <EditText
        android:id="@+id/editTextResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewResultado"
        android:layout_alignStart="@+id/editTextValor2"
        android:ems="10" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonSoma"
        android:layout_below="@+id/buttonSoma"
        android:layout_marginTop="56dp"
        android:layout_toStartOf="@+id/editTextResultado"
        android:text="@string/label_resultado" />

</RelativeLayout>
